--- a/src/View/UserRead.fxml
+++ b/src/View/UserRead.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="202.0" prefWidth="488.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ReadController">
+<AnchorPane prefHeight="202.0" prefWidth="488.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.UserReadController">
    <children>
       <GridPane layoutX="16.0" layoutY="-2.0" prefHeight="205.0" prefWidth="445.0">
         <columnConstraints>
