--- a/src/View/Rud.fxml
+++ b/src/View/Rud.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RUDController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RUDController">
   <children>
     <MenuBar fx:id="menu" VBox.vgrow="NEVER">
       <menus>
-        <Menu mnemonicParsing="false" text="File">
+        <Menu mnemonicParsing="false" text="User Options">
           <items>
             <MenuItem fx:id="btn_edit" mnemonicParsing="false" onAction="#EditProfile" text="Edit Profile" />
             <MenuItem fx:id="btn_search" mnemonicParsing="false" onAction="#SearchFunction" text="Search" />
@@ -22,6 +22,14 @@
                   <MenuItem fx:id="btn_sign_out" mnemonicParsing="false" onAction="#sign_out" text="Sign out" />
           </items>
         </Menu>
+            <Menu mnemonicParsing="false" text="Vacation Options">
+               <items>
+                  <MenuItem fx:id="viewPanel_btn" mnemonicParsing="false" onAction="#OpenVacationPanel" text="Show Panel" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem fx:id="createVacation_btn" mnemonicParsing="false" onAction="#OpenNewVacation" text="Create" />
+                  <MenuItem fx:id="deleteVacation_btn" mnemonicParsing="false" onAction="#OpenDeleteVacation" text="Delete" />
+               </items>
+            </Menu>
       </menus>
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="391.0" prefWidth="654.0" VBox.vgrow="ALWAYS">
