--- a/src/View/VacationPanel.fxml
+++ b/src/View/VacationPanel.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.VacationPanelController">
+<AnchorPane prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.VacationPanelController">
    <children>
-      <Button layoutX="225.0" layoutY="145.0" mnemonicParsing="false" text="try me, it's cool!" />
+      <TableView fx:id="table" prefHeight="650.0" prefWidth="1280.0">
+      </TableView>
    </children>
 </AnchorPane>
