--- a/src/View/Rud.fxml
+++ b/src/View/Rud.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RUDController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RUDController">
   <children>
     <MenuBar fx:id="menu" VBox.vgrow="NEVER">
       <menus>
@@ -32,16 +34,22 @@
             </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="391.0" prefWidth="654.0" VBox.vgrow="ALWAYS">
+      <HBox prefHeight="375.0" prefWidth="640.0">
          <children>
-            <ImageView fx:id="iv_about" fitHeight="384.0" fitWidth="619.0" layoutX="21.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                   <!--
-                  <Image url="@about_company.jpg" />
-                  -->
-               </image>
-            </ImageView>
+            <AnchorPane prefHeight="375.0" prefWidth="106.0">
+               <children>
+                  <ImageView fx:id="photo_img" fitHeight="161.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="-0.0" />
+               </children>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </AnchorPane>
+            <AnchorPane prefHeight="254.0" prefWidth="309.0">
+               <children>
+                  <ImageView fx:id="iv_about" fitHeight="375.0" fitWidth="572.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+               </children>
+            </AnchorPane>
          </children>
-    </AnchorPane>
+      </HBox>
   </children>
 </VBox>
