--- a/src/View/sample.fxml
+++ b/src/View/sample.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
@@ -16,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="grid_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="534.0" prefWidth="874.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
+<GridPane fx:id="grid_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="534.0" prefWidth="874.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="362.0" minWidth="10.0" prefWidth="219.33331298828125" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="325.66668701171875" minWidth="10.0" prefWidth="325.66668701171875" />
@@ -71,6 +72,16 @@
                 <TextField fx:id="txt_new_username" onKeyReleased="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="50.0" promptText="User name" />
                 <PasswordField fx:id="txt_new_user_password" onKeyReleased="#onKeyReleasedSignUp" promptText="Password" />
                 <TextField fx:id="txt_user_city" layoutX="10.0" layoutY="116.0" onKeyReleased="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="50.0" promptText="City" />
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="btn_photo" disable="true" mnemonicParsing="false" onAction="#loadPhoto" text="Add photo if you like" />
+                  <CheckBox fx:id="photo_select" disable="true" mnemonicParsing="false" opacity="0.81" prefHeight="17.0" prefWidth="101.0" scaleShape="false" text="Photo select">
+                     <HBox.margin>
+                        <Insets left="20.0" top="5.0" />
+                     </HBox.margin>
+                  </CheckBox>
+               </children>
+            </HBox>
             </children>
             <opaqueInsets>
                 <Insets />
@@ -85,6 +96,9 @@
             <GridPane.margin>
                 <Insets left="100.0" />
             </GridPane.margin>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
         </Button>
         <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
             <children>
