--- a/src/View/VacationDelete.fxml
+++ b/src/View/VacationDelete.fxml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.VacationDeleteController">
+<VBox prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.VacationDeleteController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
             <TableView fx:id="table" prefHeight="624.0" prefWidth="1280.0" />
-            <TextField fx:id="txt_idxOfVacation" layoutX="583.0" layoutY="632.0" prefHeight="25.0" prefWidth="57.0" />
-            <Button fx:id="btn_delete" layoutX="667.0" layoutY="632.0" mnemonicParsing="false" onAction="#deleteVacation" text="Delete" />
+            <Button fx:id="btn_delete" layoutX="667.0" layoutY="629.0" mnemonicParsing="false" onAction="#deleteVacation" text="Delete" />
             <Text layoutX="445.0" layoutY="649.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter Vacation Index:" />
+            <ChoiceBox fx:id="txt_idxOfVacation" layoutX="571.0" layoutY="629.0" prefHeight="25.0" prefWidth="78.0" />
       </children>
     </AnchorPane>
   </children>
